kitty website updates

--- a/kitty/_static/alabaster.css
+++ b/kitty/_static/alabaster.css
@@ -221,12 +221,12 @@ div.sphinxsidebar hr {
 /* -- body styles ----------------------------------------------------------- */
 
 a {
-    color: #004B6B;
+    color: #00587d;
     text-decoration: underline;
 }
 
 a:hover {
-    color: #6D4100;
+    color: green;
     text-decoration: underline;
 }
 
@@ -506,7 +506,7 @@ tt.xref, code.xref, a tt {
 
 a.reference {
     text-decoration: none;
-    border-bottom: 1px dotted #004B6B;
+    border-bottom: 1px dotted #00587d;
 }
 
 /* Don't put an underline on images */
@@ -515,18 +515,18 @@ a.image-reference, a.image-reference:hover {
 }
 
 a.reference:hover {
-    border-bottom: 1px solid #6D4100;
+    border-bottom: 1px solid green;
 }
 
 a.footnote-reference {
     text-decoration: none;
     font-size: 0.7em;
     vertical-align: top;
-    border-bottom: 1px dotted #004B6B;
+    border-bottom: 1px dotted #00587d;
 }
 
 a.footnote-reference:hover {
-    border-bottom: 1px solid #6D4100;
+    border-bottom: 1px solid green;
 }
 
 a:hover tt, a:hover code {
